--- a/package.json
+++ b/package.json
@@ -4,21 +4,19 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "easy-peasy": "^6.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
     "react-uuid": "^2.0.0",
-    "typescript": "^5.7.3",
-    "zod": "^3.24.1"
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
